<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_activity_main"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_local"
            android:icon="@drawable/ic_native"
            android:title="@string/menu_local_service" />
        <item
            android:id="@+id/nav_cloud"
            android:icon="@drawable/ic_cloud_black"
            android:title="@string/menu_fastbuilder_cloud" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_dark"
            android:title="@string/menu_about" />
    </group>

    <item android:title="@string/bushe_id">
        <menu>
            <item
                android:id="@+id/nav_username"
                android:title="@string/menu_username" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_sign_out" />
        </menu>
    </item>

</menu>
